@@ -1,88 +1,235 @@
-package com.rookies4.myspringbootlab.service;
+package com.rookies4
+        .myspringbootlab.service;
 
 import com.rookies4.myspringbootlab.controller.dto.BookDTO;
 import com.rookies4.myspringbootlab.entity.Book;
+import com.rookies4.myspringbootlab.entity.BookDetail;
 import com.rookies4.myspringbootlab.exception.BusinessException;
+import com.rookies4.myspringbootlab.exception.ErrorCode;
+import com.rookies4.myspringbootlab.repository.BookDetailRepository;
 import com.rookies4.myspringbootlab.repository.BookRepository;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@RequestMapping("/api/books")
+@Transactional(readOnly = true)
 public class BookService {
+
     private final BookRepository bookRepository;
+    private final BookDetailRepository bookDetailRepository;
 
-    public List<BookDTO.BookResponse> getAllBooks() {
-        List<Book> books = bookRepository.findAll();
-        return books.stream()
-                .map(BookDTO.BookResponse::fromEntity)
-                .toList();
+    public List<BookDTO.Response> getAllBooks() {
+        return bookRepository.findAll()
+                .stream()
+                .map(BookDTO.Response::fromEntity)
+                .collect(Collectors.toList());
     }
 
-    public BookDTO.BookResponse getBookById(Long id) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("Book Not Found", HttpStatus.NOT_FOUND));
-        return BookDTO.BookResponse.fromEntity(book);
+    public BookDTO.Response getBookById(Long id) {
+        Book book = bookRepository.findByIdWithBookDetail(id)
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
+        return BookDTO.Response.fromEntity(book);
     }
 
-    public  BookDTO.BookResponse getBookByIsbn(String isbn) {
-        Book book = bookRepository.findByIsbn(isbn)
-                .orElseThrow(() -> new BusinessException("Book Not Found with" + isbn, HttpStatus.NOT_FOUND));
-        return BookDTO.BookResponse.fromEntity(book);
+    public BookDTO.Response getBookByIsbn(String isbn) {
+        Book book = bookRepository.findByIsbnWithBookDetail(isbn)
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "ISBN", isbn));
+        return BookDTO.Response.fromEntity(book);
     }
 
-    public List<BookDTO.BookResponse> getBooksByAuthor(String author) {
-        List<Book> books = bookRepository.findByAuthor(author);
-        return books.stream()
-                .map(BookDTO.BookResponse::fromEntity)
-                .toList();
+    public List<BookDTO.Response> getBooksByAuthor(String author) {
+        return bookRepository.findByAuthorContainingIgnoreCase(author)
+                .stream()
+                .map(BookDTO.Response::fromEntity)
+                .collect(Collectors.toList());
+    }
+
+    public List<BookDTO.Response> getBooksByTitle(String title) {
+        return bookRepository.findByTitleContainingIgnoreCase(title)
+                .stream()
+                .map(BookDTO.Response::fromEntity)
+                .collect(Collectors.toList());
     }
 
     @Transactional
-    public BookDTO.BookResponse createBook(BookDTO.BookCreateRequest request){
-        bookRepository.findByIsbn(request.getIsbn())
-                .ifPresent(b -> {
-                    throw new BusinessException("Book with ISBN already exists", HttpStatus.BAD_REQUEST);
-                });
+    public BookDTO.Response createBook(BookDTO.Request request) {
+        if (bookRepository.existsByIsbn(request.getIsbn())) {
+            throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
+        }
 
-        Book book = request.toEntity();
+        Book book = Book.builder()
+                .title(request.getTitle())
+                .author(request.getAuthor())
+                .isbn(request.getIsbn())
+                .price(request.getPrice())
+                .publishDate(request.getPublishDate())
+                .build();
+
+        if (request.getDetailRequest() != null) {
+            BookDetail bookDetail = BookDetail.builder()
+                    .description(request.getDetailRequest().getDescription())
+                    .language(request.getDetailRequest().getLanguage())
+                    .pageCount(request.getDetailRequest().getPageCount())
+                    .publisher(request.getDetailRequest().getPublisher())
+                    .coverImageUrl(request.getDetailRequest().getCoverImageUrl())
+                    .edition(request.getDetailRequest().getEdition())
+                    .book(book)
+                    .build();
+
+            book.setBookDetail(bookDetail);
+        }
+
         Book savedBook = bookRepository.save(book);
-        return BookDTO.BookResponse.fromEntity(savedBook);
+        return BookDTO.Response.fromEntity(savedBook);
     }
 
     @Transactional
-    public BookDTO.BookResponse updateBook(Long id, BookDTO.BookUpdateRequest request){
-        Book existBook = bookRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("Book Not Found", HttpStatus.NOT_FOUND));
+    public BookDTO.Response updateBook(Long id, BookDTO.Request request) {
+        Book book = bookRepository.findById(id)
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
+
+        if (!book.getIsbn().equals(request.getIsbn()) &&
+                bookRepository.existsByIsbn(request.getIsbn())) {
+            throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
+        }
+
+        book.setTitle(request.getTitle());
+        book.setAuthor(request.getAuthor());
+        book.setIsbn(request.getIsbn());
+        book.setPrice(request.getPrice());
+        book.setPublishDate(request.getPublishDate());
+
+        if (request.getDetailRequest() != null) {
+            BookDetail bookDetail = book.getBookDetail();
+
+            if (bookDetail == null) {
+                bookDetail = new BookDetail();
+                bookDetail.setBook(book);
+                book.setBookDetail(bookDetail);
+            }
+
+            bookDetail.setDescription(request.getDetailRequest().getDescription());
+            bookDetail.setLanguage(request.getDetailRequest().getLanguage());
+            bookDetail.setPageCount(request.getDetailRequest().getPageCount());
+            bookDetail.setPublisher(request.getDetailRequest().getPublisher());
+            bookDetail.setCoverImageUrl(request.getDetailRequest().getCoverImageUrl());
+            bookDetail.setEdition(request.getDetailRequest().getEdition());
+        }
+
+        Book updatedBook = bookRepository.save(book);
+        return BookDTO.Response.fromEntity(updatedBook);
+    }
+
+    @Transactional
+    public BookDTO.Response partialUpdateBook(Long id, BookDTO.PatchRequest request) {
+        Book book = bookRepository.findById(id)
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
 
         if (request.getTitle() != null) {
-            existBook.setTitle(request.getTitle());
+            book.setTitle(request.getTitle());
         }
+
         if (request.getAuthor() != null) {
-            existBook.setAuthor(request.getAuthor());
+            book.setAuthor(request.getAuthor());
         }
+
         if (request.getIsbn() != null) {
-            existBook.setIsbn(request.getIsbn());
+            if (!book.getIsbn().equals(request.getIsbn()) &&
+                    bookRepository.existsByIsbn(request.getIsbn())) {
+                throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
+            }
+            book.setIsbn(request.getIsbn());
         }
+
         if (request.getPrice() != null) {
-            existBook.setPrice(request.getPrice());
+            book.setPrice(request.getPrice());
         }
-        Book updatedBook = bookRepository.save(existBook);
-        return BookDTO.BookResponse.fromEntity(updatedBook);
+
+        if (request.getPublishDate() != null) {
+            book.setPublishDate(request.getPublishDate());
+        }
+
+        if (request.getDetailRequest() != null) {
+            BookDetail bookDetail = book.getBookDetail();
+
+            if (bookDetail == null) {
+                bookDetail = new BookDetail();
+                bookDetail.setBook(book);
+                book.setBookDetail(bookDetail);
+            }
+
+            BookDTO.BookDetailPatchRequest detailRequest = request.getDetailRequest();
+
+            if (detailRequest.getDescription() != null) {
+                bookDetail.setDescription(detailRequest.getDescription());
+            }
+            if (detailRequest.getLanguage() != null) {
+                bookDetail.setLanguage(detailRequest.getLanguage());
+            }
+            if (detailRequest.getPageCount() != null) {
+                bookDetail.setPageCount(detailRequest.getPageCount());
+            }
+            if (detailRequest.getPublisher() != null) {
+                bookDetail.setPublisher(detailRequest.getPublisher());
+            }
+            if (detailRequest.getCoverImageUrl() != null) {
+                bookDetail.setCoverImageUrl(detailRequest.getCoverImageUrl());
+            }
+            if (detailRequest.getEdition() != null) {
+                bookDetail.setEdition(detailRequest.getEdition());
+            }
+        }
+
+        Book updatedBook = bookRepository.save(book);
+        return BookDTO.Response.fromEntity(updatedBook);
     }
 
     @Transactional
-    public void deleteBook(Long id){
-        Book existBook = bookRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("Book Not Found", HttpStatus.NOT_FOUND));
-        bookRepository.delete(existBook);
+    public BookDTO.Response updateBookDetail(Long id, BookDTO.BookDetailPatchRequest request) {
+        Book book = bookRepository.findById(id)
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
+
+        BookDetail bookDetail = book.getBookDetail();
+
+        if (bookDetail == null) {
+            bookDetail = new BookDetail();
+            bookDetail.setBook(book);
+            book.setBookDetail(bookDetail);
+        }
+
+        if (request.getDescription() != null) {
+            bookDetail.setDescription(request.getDescription());
+        }
+        if (request.getLanguage() != null) {
+            bookDetail.setLanguage(request.getLanguage());
+        }
+        if (request.getPageCount() != null) {
+            bookDetail.setPageCount(request.getPageCount());
+        }
+        if (request.getPublisher() != null) {
+            bookDetail.setPublisher(request.getPublisher());
+        }
+        if (request.getCoverImageUrl() != null) {
+            bookDetail.setCoverImageUrl(request.getCoverImageUrl());
+        }
+        if (request.getEdition() != null) {
+            bookDetail.setEdition(request.getEdition());
+        }
+
+        Book updatedBook = bookRepository.save(book);
+        return BookDTO.Response.fromEntity(updatedBook);
     }
 
+    @Transactional
+    public void deleteBook(Long id) {
+        if (!bookRepository.existsById(id)) {
+            throw new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id);
+        }
+        bookRepository.deleteById(id);
+    }
 }
